--- a/arxiv/2023_08_arxiv.html
+++ b/arxiv/2023_08_arxiv.html
@@ -242,6 +242,45 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.12426">https://arxiv.org/abs/2308.12426</a></span> Absence of SO(4) quantum criticality in Dirac semimetals at two-loop order ***** (Max Uetrecht, Igor F. Herbut, Emmanuel Stamou, Michael M. Scherer)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02723">https://arxiv.org/abs/2209.02723</a></span> Average Symmetry-Protected Topological Phases **** (Ruochen Ma, Chong Wang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09831">https://arxiv.org/abs/2208.09831</a></span> An electronic band sculpted by oxygen vacancies and indispensable for dilute superconductivity **** (Hyeok Yoon, Harold Y. Hwang)</p>
+<br>
+<p class="p1">20230828</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13181">https://arxiv.org/abs/2308.13181</a></span> Emergent Z2 symmetry near a CDW multicritical point ***** (Steven A. Kivelson, Akshat Pandey, Anisha G. Singh, Aharon Kapitulnik, Ian R. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.12598">https://arxiv.org/abs/2308.12598</a></span> Long range SYK model and boundary SYK model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.12999">https://arxiv.org/abs/2308.12999</a></span> Anomaly Enforced Gaplessness and Symmetry Fractionalization for SpinG Symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13083">https://arxiv.org/abs/2308.13083</a></span> ZN lattice gauge theories with matter fields **** (Elio J. K ̈onig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13199">https://arxiv.org/abs/2308.13199</a></span> Robust Luttinger liquid state of 1D Dirac fermions in a van der Waals system Nb9Si4Te18 (Han Woong Yeom)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.12995">https://arxiv.org/abs/2308.12995</a></span> Stability of topological superconducting qubits with number conservation *** (Matthew F. Lapa, Michael Levin)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13400">https://arxiv.org/abs/2308.13400</a></span> Geometric and conventional contributions to superfluid weight in the minimal models for superconducting copper-doped lead apatite</p>
+<p class="p2"><br></p>
+<p class="p1">20230829</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13601">https://arxiv.org/abs/2308.13601</a></span> Nematic order in topological SYK models ***** (Andrew Hardy, Anjishnu Bose, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13914">https://arxiv.org/abs/2308.13914</a></span> Hellmann Feynman Theorem in Non-Hermitian system ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14559">https://arxiv.org/abs/2308.14559</a></span> Renormalization of many-body effective field theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14379">https://arxiv.org/abs/2308.14379</a></span> A Ward identity preserving approach for investigation of phonon spectrum with self-energy and vertex corrections ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.13926">https://arxiv.org/abs/2308.13926</a></span> The Schro ̈dinger Representation and 3d Gauge Theories ***** (V.P. Nair)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02884">https://arxiv.org/abs/2305.02884</a></span> Carrollian conformal fields and flat holography (Peter West)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.14173">https://arxiv.org/abs/2304.14173</a></span> U(1) quasi-hydrodynamics: Schwinger-Keldysh effective field theory and holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14517">https://arxiv.org/abs/2308.14517</a></span> Quantum Field Theory in Curved Spacetime</p>
+<p class="p2"><br></p>
+<p class="p1">20230830</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15205">https://arxiv.org/abs/2308.15205</a></span> Theory of liquids: From Excitations to Thermodynamics **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15424">https://arxiv.org/abs/2308.15424</a></span> Nonequilibrium glass transitions in the spherical p-spin model with antisymmetric interactions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14997">https://arxiv.org/abs/2308.14997</a></span> Symmetry-protected flatband conditions for Hamiltonians with local symmetry (Jung-Wan Ryu, Alexei Andreanov, Hee Chul Park, Jae-Ho Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14755">https://arxiv.org/abs/2308.14755</a></span> On the Renormalisation group, protein folding, and naturalness</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14890">https://arxiv.org/abs/2308.14890</a></span> QCMATH: Mathematica modules for electronic structure calculations *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00605">https://arxiv.org/abs/2212.00605</a></span> Symmetry of Open Quantum Systems: Classification of Dissipative Quantum Chaos ***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06669">https://arxiv.org/abs/2210.06669</a></span> Tensor Renormalization Group at Low Temperatures: Discontinuity Fixed Point *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10099">https://arxiv.org/abs/2207.10099</a></span> Spin-Resolved Topology and Partial Axion Angles in Three-Dimensional Insulators (Yoonseok Hwang, Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15408">https://arxiv.org/abs/2308.15408</a></span> Illposedness for dispersive equations: Degenerate dispersion and Takeuchi–Mizohata condition (In-Jee Jeong, Sung-Jin Oh)</p>
+<p class="p2"><br></p>
+<p class="p1">20230831</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15533">https://arxiv.org/abs/2308.15533</a></span> Probing quantum spin liquids with a quantum twisting microscope *** (Patrick A. Lee, Gil Refael)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12151">https://arxiv.org/abs/2303.12151</a></span> Universal chaotic dynamics from Krylov space ***** (Johanna Erdmenger, Shao-Kai Jian, Zhuo-Yu Xian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15542">https://arxiv.org/abs/2308.15542</a></span> Inelastic decay from integrability ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15963">https://arxiv.org/abs/2308.15963</a></span> Polariton-Induced Unconventional Superconductivity and Emergent SU(2) Symmetry in Moir ́e flat bands (Kai Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.16009">https://arxiv.org/abs/2308.16009</a></span> Coherent exchange-coupled nonlocal Kondo impurities **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15680">https://arxiv.org/abs/2211.15680</a></span> Remarks on Berry Connection in QFT, Anomalies, and Applications *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.15934">https://arxiv.org/abs/2308.15934</a></span> Uncertainty relation for non-Hermitian operators ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
