--- a/titlecontent.html
+++ b/titlecontent.html
@@ -39,9 +39,10 @@
 <body style="background-color: var(--bg-color)">
 
 <div id="titlecontent" style="font-size:90%">
-<span class="cvitemcontent">e-mail: sehan.physics at gmail.com <br>& se.han at utoronto.ca (will fade out on August 31st, 2023)<br>
-<a href="https://www.physics.utoronto.ca">Department of Physics</a><br>
-<a href="https://www.utoronto.ca">University of Toronto (U of T)</a></span></div>
+<span class="cvitemcontent">e-mail: sehan.physics at gmail.com & sehan at sfu.ca<br>
+	<!--& se.han at utoronto.ca (will fade out on August 31st, 2023)<br>-->
+<a href="https://www.sfu.ca/physics/">Department of Physics</a><br>
+<a href="https://www.sfu.ca">Simon Fraser University (SFU)</a></span></div>
 </body>
 </html>
 
