--- a/arxiv/2023_10_arxiv.html
+++ b/arxiv/2023_10_arxiv.html
@@ -44,6 +44,35 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20231002</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.16749">https://arxiv.org/abs/2309.16749</a></span> A Long Exact Sequence in Symmetry Breaking: order parameter constraints, defect anomaly-matching, and higher Berry phases (Ryan Thorngren)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.17109">https://arxiv.org/abs/2309.17109</a></span> Broken Symmetry and Fractionalized Flux Strings in a Staggered U(1) Pure Gauge Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20231003</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.00838">https://arxiv.org/abs/2310.00838</a></span> Spin-orbit enabled unconventional Stoner magnetism (Yue Yu, Tatsuya Shishidou, Shuntaro Sumita, Michael Weinert, Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.00037">https://arxiv.org/abs/2310.00037</a></span> Solvable models for 2+1D quantum critical points: Loop soups of 1+1D conformal field theories (Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.00051">https://arxiv.org/abs/2310.00051</a></span> Kinematically constrained vortex dynamics in charge density waves (Marvin Qi, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01075">https://arxiv.org/abs/2310.01075</a></span> Possible Realization of Kitaev Spin Liquids in van der Waals Heterostructures of α-RuCl3 and CrX3 (X=Cl and I) (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01337">https://arxiv.org/abs/2310.01337</a></span> Optical conductivity and damping of plasmons due to electron-electron interaction (Dmitrii L. Maslov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02526">https://arxiv.org/abs/2307.02526</a></span> Holographic models of non-Fermi liquid metals revisited: an effective field theory approach ***** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.14517">https://arxiv.org/abs/2308.14517</a></span> Quantum Field Theory in Curved Spacetime</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05179">https://arxiv.org/abs/2208.05179</a></span> Fudan lectures on string theory ****</p>
+<p class="p2"><br></p>
+<p class="p1">20231004</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.02218">https://arxiv.org/abs/2310.02218</a></span> Symmetry-based classification of exact flat bands in single and bilayer moiré systems (Kai Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01490">https://arxiv.org/abs/2310.01490</a></span> Resummation-based Quantum Monte Carlo for Entanglement Entropy Computation (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01474">https://arxiv.org/abs/2310.01474</a></span> Symmetry TFT for Subsystem Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01493">https://arxiv.org/abs/2310.01493</a></span> Pseudogap phases, chiral anomaly and topological order with quantum loop entanglement</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.02052">https://arxiv.org/abs/2310.02052</a></span> Berry’s phase and quantum mechanical formulation of anomalous Hall effect (Kazuo Fujikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.01458">https://arxiv.org/abs/2310.01458</a></span> H-theorem do-conjecture</p>
+<p class="p2"><br></p>
+<p class="p1">20231005</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.02318">https://arxiv.org/abs/2310.02318</a></span> Electric and thermoelectric response for Weyl and multi-Weyl semimetals in planar Hall configurations including the effects of strain (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.02856">https://arxiv.org/abs/2310.02856</a></span> Locality bounds for quantum dynamics at low energy (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.03130">https://arxiv.org/abs/2306.03130</a></span> Disordered quantum critical fixed points from holography *** (Subir Sachdev, Andrew Lucas)</p>
+<p class="p2"><br></p>
+<p class="p1">20231006</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03737">https://arxiv.org/abs/2310.03737</a></span> Topological Density Correlations in a Fermi Gas **** (Pok Man Tam, Charles L. Kane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03071">https://arxiv.org/abs/2310.03071</a></span> Group-theoretic error mitigation enabled by classical shadows and symmetries</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
