--- a/arxiv/2023_10_arxiv.html
+++ b/arxiv/2023_10_arxiv.html
@@ -73,6 +73,51 @@
 <p class="p1">20231006</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03737">https://arxiv.org/abs/2310.03737</a></span> Topological Density Correlations in a Fermi Gas **** (Pok Man Tam, Charles L. Kane)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03071">https://arxiv.org/abs/2310.03071</a></span> Group-theoretic error mitigation enabled by classical shadows and symmetries</p>
+<br>
+<p class="p1">20231009</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.04016">https://arxiv.org/abs/2310.04016</a></span> Searching for a partially absorbing target by a run-and-tumble particle in a confined space (Euijin Jeon, Yong Woon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03784">https://arxiv.org/abs/2310.03784</a></span> Gapped Phases with Non-Invertible Symmetries: (1+1)d</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.03793">https://arxiv.org/abs/2310.03793</a></span> Mobile Impurity in a Two-Leg Bosonic Ladder (Thierry Giamarchi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.04070">https://arxiv.org/abs/2310.04070</a></span> Twisted Coupled Wire Model for moire ́ Sliding Luttinger Liquid</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02833">https://arxiv.org/abs/2305.02833</a></span> Emergence of curved momentum-spacetime and its effect on the cyclotron motion in the antiferromagnetic quantum critical metal **** (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15504">https://arxiv.org/abs/2303.15504</a></span> The Ginzburg-Landau theory of flat band superconductors with quantum metric</p>
+<p class="p2"><br></p>
+<p class="p1">20231010</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.04775">https://arxiv.org/abs/2310.04775</a></span> Griffiths-type theorems for short-range spin glass models (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.04495">https://arxiv.org/abs/2310.04495</a></span> Observable signatures of Hall viscosity in lowest Landau level superfluids *** (Seth Musser, Hart Goldman, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.05758">https://arxiv.org/abs/2310.05758</a></span> Stability of fractional Chern insulators with a non-Landau level continuum limit (Michael Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.05376">https://arxiv.org/abs/2310.05376</a></span> The interplay of phase fluctuations and nodal quasiparticles: ubiquitous Fermi arcs in two-dimensional d-wave superconductors (Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.04636">https://arxiv.org/abs/2310.04636</a></span> An exact method for bosonizing the Fermi surface in arbitrary dimensions ***** (Takamori Park, Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.05790">https://arxiv.org/abs/2310.05790</a></span> 2+1D symmetry-topological-order from local symmetric operators in 1+1D (Xiao-Gang Wen)</p>
+<p class="p2"><br></p>
+<p class="p1">20231011</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06024">https://arxiv.org/abs/2310.06024</a></span> Pair-breaking scattering interference as a mechanism for superconducting gap modulation *** (Yu-Ping Lin, Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06829">https://arxiv.org/abs/2310.06829</a></span> The shear viscosity of interacting graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06701">https://arxiv.org/abs/2310.06701</a></span> Foliated BF theories and Multipole symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06748">https://arxiv.org/abs/2310.06748</a></span> Monopoles in Dirac spin liquids and their symmetries from instanton calculus **** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06828">https://arxiv.org/abs/2302.06828</a></span> Fermi liquids beyond the forward scattering limit: the role of non-forward scatterings for scale invariance and instabilities ***** (Han Ma, Sung-Sik Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20231012</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06891">https://arxiv.org/abs/2310.06891</a></span> Dynamics of vacancy-induced modes in the non-Abelian Kitaev spin liquid (Natalia B. Perkins)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07286">https://arxiv.org/abs/2310.07286</a></span> Symmetry-enforced many-body separability transitions (Yu-Hsueh Chen, Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06892">https://arxiv.org/abs/2310.06892</a></span> Field theory for the dynamics of the open O(N) model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07385">https://arxiv.org/abs/2310.07385</a></span> Critical properties of three-dimensional many-flavour QEDs ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06886">https://arxiv.org/abs/2310.06886</a></span> Comparing numerical methods for hydrodynamics in a 1D lattice model (Jay D. Sau, Christopher David White)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07539">https://arxiv.org/abs/2310.07539</a></span> Anomalous quasiparticle lifetime in geometric quantum critical metals ***** (Han Ma, Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.06869">https://arxiv.org/abs/2310.06869</a></span> Flux trapping in hydrides not yet confirmed</p>
+<p class="p2"><br></p>
+<p class="p1">20231013</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07768">https://arxiv.org/abs/2310.07768</a></span> Tunable non-Fermi liquid phase from coupling to two-level systems **** (J ̈org Schmalian, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07978">https://arxiv.org/abs/2310.07978</a></span> Anderson localization transition in disordered hyperbolic lattices (Joseph Maciejko, Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08572">https://arxiv.org/abs/2310.08572</a></span> Non-Bloch band theory for non-Hermitian continuum systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07993">https://arxiv.org/abs/2310.07993</a></span> Effective Brane Field Theory with Higher-form Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08504">https://arxiv.org/abs/2310.08504</a></span> Abelian Higgs gauge theories with multicomponent scalar fields and multiparameter scalar potentials (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07760">https://arxiv.org/abs/2310.07760</a></span> Extended critical phase in quasiperiodic quantum Hall systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.07770">https://arxiv.org/abs/2310.07770</a></span> Approximate Quantum Codes From Long Wormholes (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08556">https://arxiv.org/abs/2310.08556</a></span> T-linear conductance in electron hydrodynamics (Leonid Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08554">https://arxiv.org/abs/2310.08554</a></span> Generalized symmetries in singularity-free nonlinear σ-models and their disordered phases (Salvatore D. Pace, Chenchang Zhu, Agn`es Beaudry, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10163">https://arxiv.org/abs/2303.10163</a></span> Anatomy of plasmons in generic Luttinger semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01901">https://arxiv.org/abs/2303.01901</a></span> Unconventional fully-gapped superconductivity in the heavy-fermion metal CeCu2Si2 ***** (Michael Smidman, Oliver Stockert, Emilian M. Nica, Yang Liu, Huiqiu Yuan, Qimiao Si, Frank Steglich)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
