--- a/arxiv/2023_10_arxiv.html
+++ b/arxiv/2023_10_arxiv.html
@@ -118,6 +118,83 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08554">https://arxiv.org/abs/2310.08554</a></span> Generalized symmetries in singularity-free nonlinear σ-models and their disordered phases (Salvatore D. Pace, Chenchang Zhu, Agn`es Beaudry, Xiao-Gang Wen)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10163">https://arxiv.org/abs/2303.10163</a></span> Anatomy of plasmons in generic Luttinger semimetals (Ipsita Mandal)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01901">https://arxiv.org/abs/2303.01901</a></span> Unconventional fully-gapped superconductivity in the heavy-fermion metal CeCu2Si2 ***** (Michael Smidman, Oliver Stockert, Emilian M. Nica, Yang Liu, Huiqiu Yuan, Qimiao Si, Frank Steglich)</p>
+<br>
+<p class="p1">20231016</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08628">https://arxiv.org/abs/2310.08628</a></span> From electronic structure to magnetism and skyrmions (Topical review)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08643">https://arxiv.org/abs/2310.08643</a></span> Scalable, ab initio protocol for quantum simulating SU(N)×U(1) Lattice Gauge Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08639">https://arxiv.org/abs/2310.08639</a></span> Mixed-state Quantum Phases: Renormalization and Quantum Error Correction (Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08626">https://arxiv.org/abs/2310.08626</a></span> Gauge Defects or Gauging as Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08970">https://arxiv.org/abs/2310.08970</a></span> Mutual information and correlations across topological phase transitions in topologically ordered graphene zigzag nanoribbons **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08594">https://arxiv.org/abs/2310.08594</a></span> Investigation into the nature behind the interesting half levitation behavior of claimed superconductor LK-99</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.01956">https://arxiv.org/abs/2308.01956</a></span> Cyclotron resonance and quantum oscillations of critical Fermi surfaces ***** (Haoyu Guo, Davide Valentinis, Jo ̈rg Schmalian, Subir Sachdev, Aavishkar A. Patel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.13478">https://arxiv.org/abs/2210.13478</a></span> Absence of a BCS-BEC crossover in the cuprate superconductors **** (Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08695">https://arxiv.org/abs/2310.08695</a></span> A GEOMETRIC PICTURE OF PETURBATIVE QFT</p>
+<p class="p2"><br></p>
+<p class="p1">20231017</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1710.09248">https://arxiv.org/abs/1710.09248</a> </span>NOTES ON WICK’S THEOREM IN MANY-BODY THEORY ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.10732">https://arxiv.org/abs/1812.10732</a></span> Introduction to the “second quantization” formalism for non-relativistic quantum mechanics, A possible substitution for Sections 6.7 and 6.8 of Feynman’s “Statistical Mechanics” **** (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09846">https://arxiv.org/abs/2211.09846</a></span> Pair Density Waves from Local Band Geometry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.08255">https://arxiv.org/abs/2301.08255</a></span> Entanglement in a one-dimensional critical state after measurements (Chao-Ming Jian) ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.16399">https://arxiv.org/abs/2305.16399</a></span> Topological Phases with Average Symmetries: the Decohered, the Disordered, and the Intrinsic ***** (Ruochen Ma, Jian-Hao Zhang, Zhen Bi, Meng Cheng, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.17159">https://arxiv.org/abs/2305.17159</a></span> Generalized Charges, Part II: Non-Invertible Symmetries and the Symmetry TFT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.15095">https://arxiv.org/abs/2309.15095</a></span> Strong pairing from doping-induced Feshbach resonance and second Fermi liquid through doping a bilayer spin-one Mott insulator: application to La3Ni2O7 (Hui Yang, Hanbit Oh, Ya-Hui Zhang) *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.09425">https://arxiv.org/abs/2310.09425</a></span> Unveiling UV/IR Mixing via Symmetry Defects: A View from Topological Entanglement Entropy ***** (Jintae Kim, Yun-Tak Oh, Daniel Bulmash, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.09490">https://arxiv.org/abs/2310.09490</a></span> Anyon Condensation Web and Multipartite Entanglement in 2D Fracton-like Theories (Yizhi You) ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.10601">https://arxiv.org/abs/2310.10601</a></span> Nonequilibrium dynamics in Dirac quantum criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.10916">https://arxiv.org/abs/2310.10916</a></span> Low energy electrodynamics and a hidden Fermi liquid in the heavy-fermion CeCoIn5 (N.P. Armitage)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.11236">https://arxiv.org/abs/2310.11236</a></span> The 3-dimensional Fermi liquid description for the normal state of cuprate superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.06031">https://arxiv.org/abs/2209.06031</a></span> SPONTANEOUS MASS GENERATION AND CHIRAL SYMMETRY BREAKING IN A LATTICE NAMBU–JONA-LASINIO MODEL ***</p>
+<p class="p2"><br></p>
+<p class="p1">20231018</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.10779">https://arxiv.org/abs/2310.10779</a></span> Fragile topological dislocation modes (Vladimir Juriˇci ́c)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.11425">https://arxiv.org/abs/2310.11425</a></span> Remarks on effects of ’t Hooft anomaly on eigenstate thermalization hypothesis</p>
+<p class="p2"><br></p>
+<p class="p1">20231019</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.11988">https://arxiv.org/abs/2310.11988</a></span> Emergent non-Hermitian models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.11632">https://arxiv.org/abs/2310.11632</a></span> Intertwined fractional quantum anomalous Hall states and charge density waves ***** (Xue-Yang Song, Chao-Ming Jian, Liang Fu, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.15558">https://arxiv.org/abs/2310.15558</a></span> Quantum geometry encoded to pair potentials (Youichi Yanase)</p>
+<p class="p2"><br></p>
+<p class="p1">20231020</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12469">https://arxiv.org/abs/2310.12469</a></span> Entropy and de Haas-van Alphen oscillations of a three-dimensional marginal Fermi liquid (Yi-Ming Wu, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12252">https://arxiv.org/abs/2310.12252</a></span> Emergent Symmetries and Interactions: An Isolated Fixed Point Versus A Manifold of Strongly Interacting Fixed Points ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12210">https://arxiv.org/abs/2310.12210</a></span> Probing Confinement Through Dynamical Quantum Phase Transitions: From Quantum Spin Models to Lattice Gauge Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12672">https://arxiv.org/abs/2310.12672</a></span> Emergent Properties of the Periodic Anderson Model: a High-Resolution, Real-Frequency Study of Heavy-Fermion Quantum Criticality *** (Andreas Gleis, Seung-Sup B. Lee, Gabriel Kotliar, Jan von Delft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12894">https://arxiv.org/abs/2310.12894</a></span> Fractal Subsystem Symmetries, ’t Hooft Anomalies, and UV/IR Mixing ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12961">https://arxiv.org/abs/2310.12961</a></span> Multi-moir ́e trilayer graphene: lattice relaxation, electronic structure, and magic angles ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12905">https://arxiv.org/abs/2310.12905</a></span> Realization and detection of Kitaev quantum spin liquid with Rydberg atoms **</p>
+<p class="p2"><br></p>
+<p class="p1">20231023</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12204">https://arxiv.org/abs/2310.12204</a></span> Helical trilayer graphene: a moir ́e platform for strongly-interacting topological bands **** (Liang Fu, Trithep Devakul, Pablo Jarillo-Herrero)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.13046">https://arxiv.org/abs/2310.13046</a></span> O(N) smectic σ-model (Tzu-Chi Hsieh, Leo Radzihovsky)</p>
+<p class="p2"><br></p>
+<p class="p1">20231024</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.14546">https://arxiv.org/abs/2310.14546</a></span> Quantum Hamiltonian Algorithms for Maximum Independent Sets (Frank Wilczek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.13794">https://arxiv.org/abs/2310.13794</a></span> Quantum vortex lattice via Lifshitz duality **** (Yi-Hsien Du, Ho Tat Lam, Leo Radzihovsky)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.13741">https://arxiv.org/abs/2310.13741</a></span> On quantum melting of superfluid vortex crystals: from Lifshitz scalar to dual gravity (Dung Xuan Nguyen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.14074">https://arxiv.org/abs/2310.14074</a></span> Localization renormalization and quantum Hall systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.14877">https://arxiv.org/abs/2310.14877</a></span> A non-unitary bulk-boundary correspondence :Non-unitary Haagerup RCFTs from S-fold SCFTs (Dongmin Gang, Dongyeob Kim, Sungjay Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20231025</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.15982">https://arxiv.org/abs/2310.15982</a></span> Theory of correlated Chern insulators in twisted bilayer graphene (Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.15273">https://arxiv.org/abs/2310.15273</a></span> Are fermionic conformal field theories more entangled? *** (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.15228">https://arxiv.org/abs/2310.15228</a></span> Anomalous long-distance RKKY interaction in quasicrystals **** (Junmo Jeon, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.15763">https://arxiv.org/abs/2310.15763</a></span> Nonequilibrium thermodynamics perspectives for the monotonicity of the renormalization group flow ***** (Ki-Seok Kim, Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20231026</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16080">https://arxiv.org/abs/2310.16080</a></span> Disorder effects in spiral spin liquids: Long-range spin textures, Friedel-like oscillations, and spiral spin glasses *** (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16839">https://arxiv.org/abs/2310.16839</a></span> Symmetries and anomalies of Kitaev spin-S models ***** (Ruizhi Liu, Ho Tat Lam, Han Ma, Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16084">https://arxiv.org/abs/2310.16084</a></span> Dynamical Spectral Response of Fractonic Quantum Matter (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16082">https://arxiv.org/abs/2310.16082</a></span> Gauged cooling of topological excitations and emergent fermions on quantum simulators (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16689">https://arxiv.org/abs/2310.16689</a></span> Critical-point anomalies in doped CeRhIn *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.00042">https://arxiv.org/abs/1911.00042</a></span> Duality Defect of the Monster CFT (Ying-Hsuan Lina and Shu-Heng Shao)</p>
+<p class="p2"><br></p>
+<p class="p1">20231027</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17148">https://arxiv.org/abs/2310.17148</a></span> Higgs and Nambu-Goldstone modes in condensed matter physics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16881">https://arxiv.org/abs/2310.16881</a></span> Spontaneous breaking of U(1) symmetry at zero temperature in one dimension ***** (Haruki Watanabe, Hosho Katsura, Jong Yeon Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.16878">https://arxiv.org/abs/2310.16878</a></span> Topological holography, quantum criticality, and boundary states ***** (Sheng-Jie Huang, Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17076">https://arxiv.org/abs/2310.17076</a></span> Vison crystal in quantum spin ice on the breathing pyrochlore lattice **** (Claudio Castelnovo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17607">https://arxiv.org/abs/2310.17607</a></span> 2-Form U(1) Spin Liquids: Classical Model and Quantum Aspects **** (Michel J. P. Gingras)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.12676">https://arxiv.org/abs/2301.12676</a></span> Floquet States ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
