--- a/arxiv/2023_10_arxiv.html
+++ b/arxiv/2023_10_arxiv.html
@@ -195,6 +195,21 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17076">https://arxiv.org/abs/2310.17076</a></span> Vison crystal in quantum spin ice on the breathing pyrochlore lattice **** (Claudio Castelnovo)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17607">https://arxiv.org/abs/2310.17607</a></span> 2-Form U(1) Spin Liquids: Classical Model and Quantum Aspects **** (Michel J. P. Gingras)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.12676">https://arxiv.org/abs/2301.12676</a></span> Floquet States ***</p>
+<br>
+<p class="p1">20231030</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.18157">https://arxiv.org/abs/2310.18157</a></span> Superconductivity in Luttinger semimetals near the SU(4) limit ***** (Majid Kheirkhah, Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.18312">https://arxiv.org/abs/2310.18312</a></span> Mass gaps of a Z3 gauge theory with three fermion flavors in 1 + 1 dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17740">https://arxiv.org/abs/2310.17740</a></span> Measuring Topological Field Theories: Lattice Models and Field-Theoretic Description ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.17728">https://arxiv.org/abs/2310.17728</a></span> Unconventional Superconductivity near a Nematic Instability in a Multi-Orbital system **** (Andrey Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.11632">https://arxiv.org/abs/2310.11632</a></span> Intertwined fractional quantum anomalous Hall states and charge density waves ***** (Xue-Yang Song, Chao-Ming Jian, Liang Fu, Cenke Xu)</p>
+<p class="p2"><br></p>
+<p class="p1">20231031</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.19092">https://arxiv.org/abs/2310.19092</a></span> Intrinsic Third Order Nonlinear Transport Responses (Amit Agarwal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.18393">https://arxiv.org/abs/2310.18393</a></span> Engineering the Kitaev spin liquid in a quantum dot system *** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.19058">https://arxiv.org/abs/2310.19058</a></span> Stacking Group Structure of Fermionic Symmetry-Protected Topological Phases ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.19493">https://arxiv.org/abs/2310.19493</a></span> Interacting Kitaev Chain with N = 1 Supersymmetry ***** (Keisuke Totsuka)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.19577">https://arxiv.org/abs/2310.19577</a></span> Quantum spin liquids *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.20147">https://arxiv.org/abs/2310.20147</a></span> Spinfoams: Foundations</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
