--- a/arxiv/2023_11_arxiv.html
+++ b/arxiv/2023_11_arxiv.html
@@ -67,6 +67,47 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.00753">https://arxiv.org/abs/2311.00753</a></span> Operator dynamics in Lindbladian SYK: a Krylov complexity perspective</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01096">https://arxiv.org/abs/2311.01096</a></span> Gapped boundaries of fermionic topological orders and higher central charges *** (Minyoung You)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01269">https://arxiv.org/abs/2311.01269</a></span> Non-Fermi liquid behavior in a correlated flatband pyrochlore lattice *** (Qimiao Si)</p>
+<br>
+<p class="p1">20231106</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01518">https://arxiv.org/abs/2311.01518</a></span> Signatures of dissipative quantum chaos ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01637">https://arxiv.org/abs/2311.01637</a></span> PROJECTIVE SYMMETRIES OF THREE-DIMENSIONAL TQFTS ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01516">https://arxiv.org/abs/2311.01516</a></span> A Bosonic Model of Quantum Holography **** (Brian Swingle, Mike Winer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01818">https://arxiv.org/abs/2311.01818</a></span> Fracton gravity from spacetime dipole symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.02005">https://arxiv.org/abs/2311.02005</a></span> Local condensation of charge-4<span class="s2">𝑒</span> superconductivity at a nematic domain wall **** (Matthias Hecker and Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.01572">https://arxiv.org/abs/2311.01572</a></span> Sign-problem-free effective models of triangular lattice quantum antiferromagnets ***** (Henry Shackleton, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07319">https://arxiv.org/abs/2304.07319</a></span> Scrambling is Necessary but Not Sufficient for Chaos</p>
+<p class="p2"><br></p>
+<p class="p1">20231107</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.02143">https://arxiv.org/abs/2311.02143</a></span> Pairing-based graph neural network for simulating quantum materials *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.02155">https://arxiv.org/abs/2311.02155</a></span> PT -symmetric Non-Hermitian Hopf Metal *** (Seik Pak, Cheol Hun Yeom, Sonu Verma, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03353">https://arxiv.org/abs/2311.03353</a></span> Topological Orders Having no Topological Quantum Field Theory Description</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.08294">https://arxiv.org/abs/2202.08294</a></span> Excitations in the higher lattice gauge theory model for topological phases I: Overview **** (Joe Huxford, Steven H. Simon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.07926">https://arxiv.org/abs/2112.07926</a></span> Bridging three-dimensional coupled-wire models and cellular topological states: Solvable models for topological and fracton orders *** (Yohei Fuji, Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1209.5461">https://arxiv.org/abs/1209.5461</a></span> Perturbative Superstring Theory Revisited (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20231108</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03445">https://arxiv.org/abs/2311.03445</a></span> Theory of fractional quantum anomalous Hall phases in pentalayer rhombohedral graphene moir ́e structures ***** (Zhihuan Dong, Adarsh S. Patri, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04217">https://arxiv.org/abs/2311.04217</a></span> Fractional quantum anomalous Hall effects in rhombohedral multilayer graphene in the moir ́eless limit and in Coulomb imprinted superlattice (Boran Zhou, Hui Yang, Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03435">https://arxiv.org/abs/2311.03435</a></span> Signatures of hidden octupolar order from nonlinear Hall effects ***** (Sopheak Sorn, Adarsh S. Patri)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03448">https://arxiv.org/abs/2311.03448</a></span> An integral algorithm of exponential observables for interacting fermions in quantum Monte Carlo simulation (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03438">https://arxiv.org/abs/2311.03438</a></span> Generalized hydrodynamics: a perspective</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03455">https://arxiv.org/abs/2311.03455</a></span> Is the Migdal-Eliashberg Theory for 2+1D Critical Fermi Surface Stable? ***** (Haoyu Guo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03458">https://arxiv.org/abs/2311.03458</a></span> Fluctuation Spectrum of 2+1D Critical Fermi Surface and its Application to Optical Conductivity and Hydrodynamics ***** (Haoyu Guo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.08238">https://arxiv.org/abs/2302.08238</a></span> Scaling behaviors at quantum and classical first-order transitions *** (Ettore Vicari)</p>
+<p class="p2"><br></p>
+<p class="p1">20231109</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04266">https://arxiv.org/abs/2311.04266</a></span> Reentrant supersolidity (Leo Radzihovsky)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04738">https://arxiv.org/abs/2311.04738</a></span> Phase diagram near the quantum critical point in Schwinger model at θ = π: analogy with quantum Ising chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04582">https://arxiv.org/abs/2311.04582</a></span> A Brief History of Free Parafermions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04269">https://arxiv.org/abs/2311.04269</a></span> A pseudofermion functional renormalization group study of dipolar-octupolar pyrochlore magnets ***** (Li Ern Chern, Fe ́lix Desrochers, Yong Baek Kim, Claudio Castelnovo)</p>
+<p class="p2"><br></p>
+<p class="p1">20231110</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04968">https://arxiv.org/abs/2311.04968</a></span> The Glass Transition of Quantum Hard Spheres in High Dimensions (Victor Galitski, Brian Swingle)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2307.11113">https://arxiv.org/abs/2307.11113</a><span class="s3"> Chiral Magnets from String Theory</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04962">https://arxiv.org/abs/2311.04962</a></span> Classification of Dipolar Symmetry-Protected Topological Phases: Matrix Product States, Stabilizer Hamiltonians and Finite Tensor Gauge Theories **** (Ho Tat Lam)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.05568">https://arxiv.org/abs/2311.05568</a></span> Anomalous Hall Crystals in Rhombohedral Multilayer Graphene I: Interaction-Driven Chern Bands and Fractional Quantum Hall States at Zero Magnetic Field (Ashvin Vishwanath, Daniel E. Parker)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04970">https://arxiv.org/abs/2311.04970</a></span> Theory of topological exciton insulators and condensates in flat Chern bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.04958">https://arxiv.org/abs/2311.04958</a></span> Moiré Fractional Chern Insulators I: First-principles calculations and Continuum Models of Twisted Bilayer MoTe2 (B. Andrei Bernevig)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
